react-app/src/components/Studios/StudioDetails.css
body {
    font-family: 'Inter', sans-serif;
}

.studio-details-header-container {
    height: 420px;
}

.studio-details-header-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
}


.studio-details-avatar {
    height: 65px;
    width: 65px;
    border-radius: 32px;
}

.studio-details-avatar-name-location {
    display: flex;
    align-items: center;
    /* height: 70%; */
}


.studio-details-name-location-container {
    margin-left: 15px;
    word-break: break-word;
}

.studio-details-info-main {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;

}

.studio-details-name {
    font-size: 24px;
    font-weight: bolder;
}

.studio-details-location {
    font-size: 14px;
    color: #202125;
}

.studio-details-header-reviews {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    height: 50%;
}


.studio-details-info-container {
    padding: 25px;
    border: 1px solid #ddd;
    border-radius: 17px;
    width: 70%;
    height: 160px;
    background-color: #fafafa;
    opacity: .97;
    transform: translateY(-90px);
}


.three-dots {
    position: absolute;
    right: 0;
    margin-right: 20px;
    cursor: pointer;
}

.dropdown-container {
    width: 220px;
    height: 100px;
    /* border: 1px solid white; */
    box-shadow: 2px 2px 2px 2px lightgray;
    border-radius: 8px;
    background-color: white;
    margin-top: 0.5rem;
    margin-left:-5rem;
    position: absolute;
    right: 2px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

.update-studio-button,
.delete-studio-button {
    height: 50%;
    width: 100%;
    border: none;
    background-color: white;
    cursor: pointer;
    font-size: 14px;
    /* font-weight: 600; */
}
.update-studio-button:hover,
.delete-studio-button:hover {
    background-color: #ddd;
}

.update-studio-button {
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    color: black;
}

.studio-details-header-booking-button-container {
    display: flex;
    flex-direction: row;
}

.studio-details-nav-bar {
    display: flex;
    width: 40%;
    /* width: 500px; */
    justify-content: center;
}

.studio-details-content-container {
    display: flex;
    flex-direction: column;
    /* margin-left: 100px; */
    margin-left: 14vw;
    margin-right: 14vw;
    margin-bottom: 100px;
}

.studio-details-line {
    border-bottom: 1px solid #ddd;
}

.about-the-studio-container {
    padding: 20px 0;
    width: 50%;
    display: flex;
    margin-bottom: 50px;
}


.studio-portfolio-main {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
}

.studio-portfolio-header-container {
    display: flex;
    justify-content: space-between;
}

.studio-portfolio-image-container {
    /* width: 25%; */
    width: 400px;
    height: 350px;
}

.studio-portfolio-image {
    cursor: pointer;
    width: 100%;
    height: 100%;
    border-radius: 18px;
    object-fit: cover;
}

.studio-description {
    word-break: break-word;
    /* word-wrap: break-word; */
}

.word-break {
    word-break: break-all;
    word-wrap: break-word;
}

.dropdown-off {
    display: none;
}

